# SDL-Pong

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: Collidable.hpp  Color.hpp  GameObject.hpp  GameState.hpp  RenderManager.hpp  RigidWorld.hpp  UpdateManager.hpp  UpdateableGameObject.hpp
src/: CMakeLists.txt  Vector2.hpp  main.cpp
src/Color/: CMakeLists.txt  Color.cpp
src/GameObjects/: CMakeLists.txt  Collidable.hpp  Drawable.hpp  DrawableGameObject.cpp  DrawableGameObject.hpp  ExampleSubclass.cpp  GameObject.cpp  Rigidbody.cpp  Rigidbody.hpp  UDGameObject.cpp  UDGameObject.hpp  Updateable.hpp  UpdateableGameObject.cpp  UpdateableGameObject.hpp
src/GameState/: CMakeLists.txt  GameState.cpp  GameState.hpp  RenderManager.cpp  RenderManager.hpp  RigidWorld.cpp  RigidWorld.hpp
src/GameState/RenderManager/: CMakeLists.txt  RenderManager.cpp
src/GameState/Update/: UpdateManager.cpp
src/game/: Collidable.hpp  ExCollidableGO.cpp  GameObject.cpp  RigidWorld.cpp  RigidWorld.hpp  Rigidbody.hpp  UpdateableGameObject.hpp  Vector2.hpp
